<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_button_name">Поиск</string>
    <string name="media_button_name">Медиатека</string>
    <string name="settings_button_name">Настройки</string>
    <string name="theme_button_name">Темная тема</string>
    <string name="share_button_name">Поделиться приложением</string>
    <string name="share_content">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_button_name">Написать в поддержку</string>
    <string name="support_extra_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_extra_email">mailto: hatepk@yandex.ru</string>
    <string name="support_extra_topic">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="agreement_button_name">Пользовательское соглашение</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">
        Проблемы со связью \n
        \n
        Загрузка не удалась. Проверьте подключение к интернету
    </string>
    <string name="reload">Обновить</string>
    <string name="switch_text">Темная тема</string>
    <string name="search_history_header">Вы искали</string>
    <string name="search_history_clear_button_text">Очистить историю</string>

    <string name="favourites_text_placeholder">Ваша медиатека пуста</string>

    <string name="playlists_new_playlist_button_text">Новый плейлист</string>
    <string name="playlists_text_placeholder">Вы не создали \n ни одного плейлиста</string>

    <string name="library_tab_name_favourites">Избранные треки</string>
    <string name="library_tab_name_playlists">Плейлисты</string>

    <string name="bottom_sheet_header">Добавить в плейлист</string>
    <string name="playlist_unit_empty_placeholder">В этом плейлисте пока нет треков</string>
    <string name="playlist_unit_no_tracks_for_sharing">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_unit_ensure_about_deleting">Хотите удалить трек?</string>


</resources>