<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout style="@style/HeaderContainer">
        <Button
            android:id="@+id/back_button"
            style="@style/HeaderButton"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                style="@style/HeaderText"
                android:text="@string/settings_button_name"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp">

        <Switch
            style="@style/SwitchButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_menu_button_height"
            android:text="@string/theme_button_name"
            android:textSize="@dimen/settings_menu_button_text_size"
            android:paddingLeft="@dimen/settings_menu_button_padding_left"
            android:paddingRight="6dp"
            android:fontFamily="@font/ys_display_regular"
            />

        <FrameLayout
            style="@style/ButtonContainer"
            android:id="@+id/share_button">
            <TextView
                style="@style/ButtonText"
                android:text="@string/share_button_name"/>
            <ImageView
                style="@style/ButtonIcon"
                android:src="@drawable/share"/>
        </FrameLayout>

        <FrameLayout
            style="@style/ButtonContainer"
            android:id="@+id/support_button">
            <TextView
                style="@style/ButtonText"
                android:text="@string/support_button_name"/>
            <ImageView
                style="@style/ButtonIcon"
                android:src="@drawable/support"/>
        </FrameLayout>

        <FrameLayout
            style="@style/ButtonContainer"
            android:id="@+id/agreement_button">
            <TextView
                style="@style/ButtonText"
                android:text="@string/agreement_button_name"/>
            <ImageView
                style="@style/ButtonIcon"
                android:src="@drawable/agreement"/>
        </FrameLayout>

    </LinearLayout>

</LinearLayout>