<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/header_text_size"
        android:textFontWeight="500"
        android:paddingHorizontal="14dp"
        android:paddingTop="14dp"
        android:paddingBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="28dp"
        android:paddingHorizontal="16dp">

        <Button app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconTint="@color/button_text_color"
            app:iconPadding="@dimen/button_icon_padding"
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp_value"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search_button_name"
            android:textSize="@dimen/main_menu_button_text_size"
            android:textColor="@color/button_text_color"
            app:cornerRadius="@dimen/main_menu_button_corner_radius"/>

        <Button app:icon="@drawable/media"
            app:iconGravity="textStart"
            app:iconTint="@color/button_text_color"
            app:iconPadding="@dimen/button_icon_padding"
            android:id="@+id/media_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp_value"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media_button_name"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/main_menu_button_text_size"
            android:layout_marginTop="16dp"
            app:cornerRadius="@dimen/main_menu_button_corner_radius"/>

        <Button app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/button_text_color"
            app:iconPadding="@dimen/button_icon_padding"
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp_value"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings_button_name"
            android:textSize="@dimen/main_menu_button_text_size"
            android:textColor="@color/button_text_color"
            android:layout_marginTop="16dp"
            app:cornerRadius="@dimen/main_menu_button_corner_radius"/>

    </LinearLayout>
</LinearLayout>