<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <LinearLayout style="@style/HeaderContainer">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                style="@style/HeaderText"
                android:text="@string/search_button_name"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_menu_input_height"
        android:layout_marginHorizontal="@dimen/search_menu_input_margin_horizontal"
        android:layout_marginVertical="@dimen/search_menu_input_margin_vertical"
        android:orientation="horizontal"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/search_input"
            style="@style/Search_input"
            android:layout_weight="1"
            android:layout_width="@dimen/zero_dp_value"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:drawableLeft="@drawable/search_menu_icon"
            android:drawablePadding="@dimen/search_menu_input_hint_text_padding"
            android:paddingLeft="@dimen/search_menu_input_hint_icon_padding"
            android:inputType="text"

            android:hint="Поиск"
            android:lines="1"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="@dimen/search_menu_button_text_size"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
        <Button
            android:id="@+id/search_input_clear_button"
            style="@style/ClearSearchButton"
            android:layout_width="@dimen/search_menu_hide_input_button_width"
            android:layout_height="@dimen/search_menu_hide_input_button_height"
            app:icon="@drawable/clear_search_button"
            android:visibility="gone"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="140dp"
            android:indeterminateTint="@color/switch_color"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/searchPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/searchPlaceholderImage"
                style="@style/ErrorImage"/>
            <TextView
                android:id="@+id/searchPlaceholderMessage"
                style="@style/ErrorText"
                />
            <Button
                android:id="@+id/errorButton"
                style="@style/BlackButton"
                android:text="@string/reload"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/historyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_history_header_height"
                android:text="@string/search_history_header"
                android:gravity="center"
                android:textSize="@dimen/search_history_header_font_size"
                android:fontFamily="@font/ys_display_medium"
                android:layout_marginTop="@dimen/search_history_element_margin_top"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSaved"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <Button
                android:id="@+id/clearHistoryButton"
                style="@style/BlackButton"
                android:text="@string/search_history_clear_button_text" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
